<resources>
    <string name="app_name">ProjectFirebase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="judul">judul</string>
    <string name="post">POST</string>
    <string name="isi_post_disini">isi post disini</string>
    <string name="simpan">SIMPAN</string>
    <string name="list_catatan">LIST CATATAN</string>
</resources>